src/core/util.h

void safe_memcpy(void *dest, const void *src, size_t len);
void janet_def_addflags(JanetFuncDef *def);
char *get_processed_name(const char *name);
/* Initialize builtin libraries */
void janet_lib_io(JanetTable *env);
void janet_lib_math(JanetTable *env);
void janet_lib_array(JanetTable *env);
void janet_lib_tuple(JanetTable *env);
void janet_lib_buffer(JanetTable *env);
void janet_lib_table(JanetTable *env);
void janet_lib_struct(JanetTable *env);
void janet_lib_fiber(JanetTable *env);
void janet_lib_os(JanetTable *env);
void janet_lib_string(JanetTable *env);
void janet_lib_marsh(JanetTable *env);
void janet_lib_parse(JanetTable *env);
void janet_lib_asm(JanetTable *env);
void janet_lib_compile(JanetTable *env);
void janet_lib_debug(JanetTable *env);
void janet_lib_peg(JanetTable *env);
void janet_lib_inttypes(JanetTable *env);
void janet_lib_net(JanetTable *env);
void janet_lib_ev(JanetTable *env);
void janet_lib_filewatch(JanetTable *env);
void janet_lib_ffi(JanetTable *env);