src/zig/subsystems/core_env.zig

//! The core environment: `src/core/corelib.c` and `src/core/run.c` entire.
//! Thirty-six cfunctions, the native-module loader, the bootstrap's inline
//! assembler, the environment that every other `janet_lib_*` is registered
//! into, and the three entry points that run Janet source in one. This is
//! Phase 10 Part 10.
//!
//! ## Two files, one selector
//!
//! Part 4's consolidation rule asks whether the pieces convert in different
//! increments, and these do not. They are also one subject rather than two
//! that happen to land together: `corelib.c` builds the core environment and
//! `run.c` is the only thing in the tree that runs code *in* one without
//! being handed a fiber first. `janet_dobytes` reads a `JanetTable *env` and
//! nothing else in `run.c` means anything without it. Part 5's rule -- a
//! selector's subject is a subsystem, not a file -- decides the rest.
//!
//! ## What a raise looks like here, and where it does not appear
//!
//! A cfunction that decides to raise returns `raise.Error` from an `Impl`
//! function and delivers it in a two-line C face, which is the shape Part 9
//! settled. A cfunction that makes no such decision has no error channel and
//! is written as the plain `JanetCFunction` it is: `(describe x)` cannot fail
//! on its own account, and giving it an error union it never returns would be
//! ceremony rather than shape.
//!
//! Neither kind is jump-free, which is why the marker above is still here.
//! `janet_arity`, `janet_getstring` and their thirty relatives are
//! `-Dargs-core`'s C faces, `janet_panic_type` is another, and a call to one
//! from this object crosses the C ABI and therefore raises by jumping. That is
//! Part 4's seam rule -- an error union cannot cross a subsystem seam -- and
//! not something this increment could have avoided. Every frame between such a
//! call and the fiber's try scope holds nothing: the scratch allocations these
//! functions make are `janet_smalloc`'s, which the collector releases on the
//! unwind.
//!
//! ## The bootstrap half is compiled only into the image generator
//!
//! `janet_core_env` has two implementations in the C original, chosen by
//! `JANET_BOOTSTRAP`: the generator assembles the environment from scratch,
//! and the runtime unmarshals it from the image. Both are here, behind
//! `corefn.bootstrap`, and Zig does not analyse the branch it does not take --
//! so the inline assembler below is checked by `-Dboot=zig` and by nothing
//! else. That is the same exposure Part 8 recorded for `JANET_MARSHAL_DEBUG`,
//! except that here there *is* a configuration that compiles it, and the
//! acceptance matrix runs it.
//!
//! ## Feature gates are read off the translated macros
//!
//! `janet_load_libs` calls seven `janet_lib_*` functions that exist only in
//! some configurations, and this file asks `@hasDecl(c, "JANET_PEG")` and its
//! kin rather than having `build.zig` restate each condition. `state_abi.h`
//! restates four macros on the stated grounds that "translate-c does not
//! surface a macro defined with no value"; under Zig 0.16 it does, as a
//! zero-length string constant, which `@hasDecl` finds. The restatements are
//! left alone -- they are wanted as *values* at their own call sites -- but a
//! new gate does not need one.

const std = @import("std");
const builtin = @import("builtin");
const abi = @import("abi");
const corefn = @import("corefn");
const options = @import("options");
const raise = @import("raise");
const pp_format = @import("pp_format.zig");
const c = abi.c;
const stdio = @import("stdio.zig");
const trace_frames = @import("trace_frames.zig");
const printer = @import("printer.zig");
const lifecycle = @import("lifecycle.zig");
const containers = @import("containers.zig");
const arglayer = @import("arglayer.zig");

/// The fiber's pushes, raise-capable since Part 17a. `(native ...)` roots the
/// module's environment on the fiber stack before running third-party code.
const fiber_core = @import("fiber_core.zig");
const clib = @import("dynlib.zig");
const asm_core = @import("asm_core.zig");
const ev_loop = @import("ev_loop.zig");
const evloop = @import("evloop.zig");
const inttypes = @import("inttypes.zig");
const io_core = @import("io_core.zig");
const marsh = @import("marsh.zig");
const math = @import("math.zig");
const os_surface = @import("os_surface.zig");
const parser_core = @import("parser_core.zig");
const peg = @import("peg.zig");

const windows = builtin.os.tag == .windows;

/// `src/core/util.h`, which `abi.zig` deliberately does not translate.
extern fn safe_memcpy(dest: ?*anyopaque, src: ?*const anyopaque, len: usize) callconv(.c) void;
extern fn janet_def_addflags(def: *c.JanetFuncDef) callconv(.c) void;
extern fn get_processed_name(name: [*:0]const u8) callconv(.c) [*c]u8;

extern fn janet_lib_io(env: *c.JanetTable) callconv(.c) void;
extern fn janet_lib_math(env: *c.JanetTable) callconv(.c) void;
extern fn janet_lib_array(env: *c.JanetTable) callconv(.c) void;
extern fn janet_lib_tuple(env: *c.JanetTable) callconv(.c) void;
extern fn janet_lib_buffer(env: *c.JanetTable) callconv(.c) void;
extern fn janet_lib_table(env: *c.JanetTable) callconv(.c) void;
extern fn janet_lib_struct(env: *c.JanetTable) callconv(.c) void;
extern fn janet_lib_fiber(env: *c.JanetTable) callconv(.c) void;
extern fn janet_lib_os(env: *c.JanetTable) callconv(.c) void;
extern fn janet_lib_string(env: *c.JanetTable) callconv(.c) void;
extern fn janet_lib_marsh(env: *c.JanetTable) callconv(.c) void;
extern fn janet_lib_parse(env: *c.JanetTable) callconv(.c) void;
extern fn janet_lib_compile(env: *c.JanetTable) callconv(.c) void;
extern fn janet_lib_debug(env: *c.JanetTable) callconv(.c) void;
extern fn janet_lib_asm(env: *c.JanetTable) callconv(.c) void;
extern fn janet_lib_peg(env: *c.JanetTable) callconv(.c) void;
extern fn janet_lib_inttypes(env: *c.JanetTable) callconv(.c) void;
extern fn janet_lib_net(env: *c.JanetTable) callconv(.c) void;
extern fn janet_lib_ev(env: *c.JanetTable) callconv(.c) void;
extern fn janet_lib_filewatch(env: *c.JanetTable) callconv(.c) void;
extern fn janet_lib_ffi(env: *c.JanetTable) callconv(.c) void;

/// `stdin` and `stdout`, which cannot be named from Zig portably. `io.c` keeps
/// these two beside `stdio.err` for the reason its comment there gives:
/// translate-c renders the three handles a different way on each of this
/// project's platforms, and on mingw the rendering is a compile error at the
/// reference rather than at the use. They are scaffold in the sense "Target"
/// gives the word -- no C caller has one -- and they go with `janet_dynprintf`
/// in Part 17.
/// `janet_eprintf`, which `janet.h` spells as a variadic macro over
/// `janet_dynprintf` and translate-c therefore cannot render at all. Part 7
/// established the shape: Zig cannot define a C variadic on every target here,
/// but calling one is ordinary, so the macro is written out. `trace_frames.zig`
/// carries the same three lines for the same reason.
inline fn eprintf(comptime format: [:0]const u8, args: anytype) void {
    // `pp_format.dynprintf` can raise: `(dyn :err)` may be a Janet function, and
    // calling it can. This position cannot carry one -- it is a trace or a
    // diagnostic on the way out -- so the raise is reported exactly as the C
    // face reported it before Part 18 deleted the variadic.
    raise.reported(pp_format.dynprintf("err", @ptrCast(@alignCast(stdio.err())), format, args));
}

const has_ev = @hasDecl(c, "JANET_EV");
const has_net = @hasDecl(c, "JANET_NET");
const has_ffi = @hasDecl(c, "JANET_FFI");
const has_peg = @hasDecl(c, "JANET_PEG");
const has_assembler = @hasDecl(c, "JANET_ASSEMBLER");
const has_int_types = @hasDecl(c, "JANET_INT_TYPES");
const has_filewatch = @hasDecl(c, "JANET_FILEWATCH");
const has_dynamic_modules = @hasDecl(c, "JANET_DYNAMIC_MODULES");
const bits64 = @hasDecl(c, "JANET_64");

/// `JANET_OUT_OF_MEMORY`, which is fatal rather than raising.
inline fn allocated(pointer: ?*anyopaque) *anyopaque {
    if (pointer) |p| return p;
    c.janet_zig_out_of_memory();
}

inline fn wrapInteger(x: i32) c.Janet {
    return c.janet_wrap_number(@floatFromInt(x));
}

// ==========================================================================
// Loading a native module.
// ==========================================================================

fn janet_nativeImpl(name: [*c]const u8, err: [*c]c.JanetString) raise.Raising(c.JanetModule) {
    try lifecycle.sandboxAssert(c.JANET_SANDBOX_DYNAMIC_MODULES);
    const processed_name = get_processed_name(name);
    const lib = clib.load(@ptrCast(processed_name));
    if (name != processed_name) c.janet_free(processed_name);
    if (clib.failed(lib)) {
        err.* = c.janet_cstring(clib.lastError());
        return null;
    }
    const init: c.JanetModule = @ptrCast(@alignCast(try clib.symbol(lib, "_janet_init")));
    if (init == null) {
        err.* = c.janet_cstring("could not find the _janet_init symbol");
        return null;
    }
    const getter: c.JanetModconf = @ptrCast(@alignCast(try clib.symbol(lib, "_janet_mod_config")));
    if (getter == null) {
        err.* = c.janet_cstring("could not find the _janet_mod_config symbol");
        return null;
    }
    const modconf = getter.?();
    const host: c.JanetBuildConfig = .{
        .major = c.JANET_VERSION_MAJOR,
        .minor = c.JANET_VERSION_MINOR,
        .patch = c.JANET_VERSION_PATCH,
        .bits = c.JANET_CURRENT_CONFIG_BITS,
    };
    if (host.major != modconf.major or
        host.minor != modconf.minor or
        host.bits != modconf.bits)
    {
        var errbuf: [128]u8 = undefined;
        // The `%.d` in the host's minor position is the C original's and is
        // reproduced: it is precision zero, so a zero minor version prints as
        // nothing at all. `FOUND.md` has it.
        _ = c.snprintf(
            &errbuf,
            errbuf.len,
            "config mismatch - host %d.%.d.%d(%.4x) vs. module %d.%d.%d(%.4x) - native needs to be recompiled!",
            host.major,
            host.minor,
            host.patch,
            host.bits,
            modconf.major,
            modconf.minor,
            modconf.patch,
            modconf.bits,
        );
        err.* = c.janet_cstring(&errbuf);
        return null;
    }
    return init;
}

export fn janet_native(name: [*c]const u8, err: [*c]c.JanetString) callconv(.c) c.JanetModule {
    return raise.reported(janet_nativeImpl(name, err));
}

// ==========================================================================
// module/expand-path.
// ==========================================================================

fn dynCString(name: [*:0]const u8, dflt: [*:0]const u8) raise.Raising([*:0]const u8) {
    const x = c.janet_dyn(name);
    if (c.janet_checktype(x, c.JANET_NIL) != 0) return dflt;
    if (c.janet_checktype(x, c.JANET_STRING) == 0) {
        return pp_format.panicf("expected string, got %v", .{x});
    }
    const jstr = c.janet_unwrap_string(x);
    const cstr: [*:0]const u8 = @ptrCast(jstr);
    if (std.mem.len(cstr) != @as(usize, @intCast(c.janet_string_length(jstr)))) {
        return pp_format.panicf("string %v contains embedded 0s", .{x});
    }
    return cstr;
}

inline fn isPathSep(ch: u8) bool {
    if (windows and ch == '\\') return true;
    return ch == '/';
}

/// `strncmp` against a literal, which is what the C original's chain of
/// `strncmp(template + i, ":all:", 5)` calls does. It reads through the
/// template's NUL rather than past it, so a template ending in a colon is
/// compared safely and answers no match.
inline fn matches(p: [*c]const u8, comptime literal: [:0]const u8) bool {
    return c.strncmp(p, literal.ptr, literal.len) == 0;
}
